Setup OpenRewrite to avoid Guava and favour Java 21 methods
* Java 15: String.formatted
* Java 21: SequencedCollection.getFirst() and .getLast()
* Disable rule that adds a dependency to jakarta-annotation because the only javax.annotation we use are @NotNull and @Nullable which are _not_ in that package
* Guava: some changes not optimal; because it respects our use of a HashSet were in most cases, we didn't really care, except for the conciseness of Guava's factory method. Will change this further to use e.g Set.of(...)