@@ -76,9 +76,7 @@ public class MessageHandlerImpl implements MessageHandler {
     ) {
         // TODO proper logs
         final String traceId = UUID.randomUUID().toString();
-        System.out.println(
-            String.format("Exception [%s]: %s ", traceId, throwable)
-        );
+        System.out.println("Exception [%s]: %s ".formatted(traceId, throwable));
         throwable.printStackTrace();
         final ErrorMessage message = new ErrorMessage(
             clientTxId,
@@ -121,7 +119,7 @@ public class MessageHandlerImpl implements MessageHandler {
         final Action action = actionFactory.actionFor(actionParam);
         final ActionResponse res = action.exec(ctx, withActor);
 
-        System.out.println(String.format("%s => %s", withActor, res.result()));
+        System.out.println("%s => %s".formatted(withActor, res.result()));
 
         final AddressedMessages messageBundle = generateMessages(
             ctx,
